--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
       "args": [],
       "stopAtEntry": false,
       "externalConsole": false,
-      "cwd": "/nfs/homes/ahbajaou/Desktop/ddd",
-      "program": "/nfs/homes/ahbajaou/Desktop/ddd/build/Debug/outDebug",
+      "cwd": "/Users/himejjad/cb3d",
+      "program": "/Users/himejjad/cb3d/build/Debug/outDebug",
       "MIMode": "gdb",
       "miDebuggerPath": "gdb",
       "setupCommands": [
